--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
   "name": "prisma_starter",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "prisma": "^2.22.1"
+    "prisma": "^2.23.0"
   },
   "dependencies": {
-    "@prisma/client": "^2.22.1",
-    "express": "^4.17.1"
-  }
+    "@babel/register": "^7.13.16",
+    "@prisma/client": "^2.23.0",
+    "esm": "^3.2.25",
+    "express": "^4.17.1",
+    "express-validator": "^6.11.1",
+    "ng": "^0.0.0",
+    "nodemon": "^2.0.7",
+    "serve": "^11.3.2",
+    "uid": "^2.0.0"
+  },
+  "description": ""
 }
